--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.8.1
-Django==5.1.6
-django-crispy-forms==2.3
-sqlparse==0.5.3
-tzdata==2025.1
+Django
+django-crispy-forms
+crispy-tailwind
+uvicorn
+dj-database-url
+whitenoise[brotli]
+psycopg[binary]
+python-dotenv
