fix password reset and add email support for password reset

--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,8 @@ crispy-tailwind = "*"
 uvicorn = "*"
 dj-database-url = "*"
 whitenoise = {extras = ["brotli"], version = "*"}
-#psycopg = {extras = ["binary"], version = "*"}
 python-dotenv = "*"
+resend = "*"
 
 [dev-packages]
 
